completing the 10 routes and testing it

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_DB= 'mongodb+srv://root:root@cluster0.iddsbpm.mongodb.net/schoolportal'
+MONGO_DB= 'mongodb+srv://root:root@cluster0.iddsbpm.mongodb.net/kadmedia'
+AUTH_KEY = 'vx/1Nac2+NJtrNX+bVYQ4ha29d+M3NabqwL0mILWLYA='
